implementations/rust/ockam/ockam_node_test_attribute/tests/node_test/fail_if_does_not_return_result.rs
#[ockam_node_test_attribute::node_test]
async fn my_test(ctx: ockam::Context) -> String {
    ctx.address();
}
